# dimjournal

./: .coveragerc  .gitignore  .isort.cfg  AUTHORS.md  CHANGELOG.md  CICD_SETUP.md  INSTALLATION.md  Makefile  PLAN.md  README.md  REFACTOR_FILELIST.txt  REFACTOR_SPLITTING.md  TODO.md  WORKFLOWS_TEMPLATES.md  build-and-test.sh  llms.txt  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
dimjournal/_previous/: __init__.py  conftest.py  dimjournal.py  setup.py  test_dimjournal.py
scripts/: build.py  release.py  test.py  validate.py
src/dimjournal/: __init__.py  __main__.py  dimjournal.py  ui.py
tests/: conftest.py  test_dimjournal.py  test_skeleton.py
