[metadata]
name = dimjournal
description = Archive utility for Midjourney
author = Adam Twardoch
author_email = adam+github@twardoch.com
license = Apache-2.0
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/twardoch/dimjournal
project_urls =
    Documentation = https://github.com/twardoch/dimjournal
    Source = https://github.com/twardoch/dimjournal
    Download = https://pypi.org/project/dimjournal
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
install_requires =
    importlib-metadata; python_version<"3.8"
    beautifulsoup4>=4.12.2
    fire>=0.5.0
    numpy>=1.25.0
    Pillow>=10.0.0
    pymtpng>=1.0
    pytest>=7.3.1
    python-slugify>=8.0.1
    Requests>=2.31.0
    selenium>=4.10.0
    setuptools>=67.6.1
    tqdm>=4.65.0
    undetected_chromedriver>=3.5.0
    urwid>=2.1.2

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
     dimjournal = dimjournal.__main__:cli

[tool:pytest]
addopts =
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 4.4.1
package = dimjournal
extensions =
    github_actions
    markdown
    pre_commit
